[gd_scene load_steps=5 format=3 uid="uid://0dtbvi0fxwuh"]

[ext_resource type="Texture2D" uid="uid://ddnbab70djia4" path="res://all art/ruler animations - emily/ruler 4.png" id="1_3dryf"]
[ext_resource type="Script" path="res://ruler_upgrade_shop_item.gd" id="1_8u51w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5j1qy"]
radius = 118.004

[sub_resource type="SpriteFrames" id="SpriteFrames_3x5so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3dryf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="RulerShopItem" type="Node2D"]
script = ExtResource("1_8u51w")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5j1qy")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -33.0
offset_top = -84.0
offset_right = 29.0
offset_bottom = -50.0
theme_override_font_sizes/font_size = 18
text = "Buy"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-5, -7)
scale = Vector2(0.251458, 0.251458)
sprite_frames = SubResource("SpriteFrames_3x5so")

[node name="useLabel" type="Label" parent="."]
offset_left = -46.0
offset_top = 79.0
offset_right = 42.0
offset_bottom = 102.0
text = "Uses Left"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="."]
offset_left = -47.0
offset_top = 59.0
offset_right = 41.0
offset_bottom = 82.0
text = "Cost: "
horizontal_alignment = 1

[node name="ItemLabel" type="Label" parent="."]
offset_left = -60.0
offset_top = 29.0
offset_right = 52.0
offset_bottom = 52.0
text = "Upgrade Ruler"
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
